<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.amg.slimadownnow.ui.home.HomeTabFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_tab_frag">

    </fragment>

    <fragment
        android:id="@+id/navigation_weight"
        android:name="com.amg.slimadownnow.ui.weight.tab.WeightTabFragment"
        android:label="@string/title_weight"
        tools:layout="@layout/weight_tab_frag">

    </fragment>

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.amg.slimadownnow.ui.food.tab.FoodTabFragment"
        android:label="@string/title_food"
        tools:layout="@layout/food_tab_frag">

    </fragment>

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.amg.slimadownnow.ui.exercise.tab.ExerciseTabFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/exercise_tab_frag">

    </fragment>

</navigation>